--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-xmlns:android="http://schemas.android.com/apk/res/android"
-           id="cordova-plugin-firebase-crash"
-      version="7.0.4">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    id="cordova-plugin-firebase-crash"
+    version="7.0.4-NTL1">
 
     <name>cordova-plugin-firebase-crash</name>
     <description>Cordova plugin for Firebase Crashlytics</description>
@@ -11,9 +11,9 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     <issue>https://github.com/chemerisuk/cordova-plugin-firebase-crash/issues</issue>
 
     <engines>
-        <engine name="cordova" version=">=10.0.0"/>
-        <engine name="cordova-android" version=">=11.0.0"/>
-        <engine name="cordova-ios" version=">=6.0.0"/>
+        <engine name="cordova" version=">=11.0.0" />
+        <engine name="cordova-android" version=">=11.0.0" />
+        <engine name="cordova-ios" version=">=6.2.0" />
     </engines>
 
     <js-module src="www/FirebaseCrash.js" name="FirebaseCrash">
@@ -21,9 +21,11 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     </js-module>
 
     <preference name="CRASHLYTICS_COLLECTION_ENABLED" default="true" />
+    <dependency id="cordova-outsystems-firebase-core"
+        url="https://github.com/OutSystems/cordova-outsystems-firebase-core.git#1.0.1" />
 
     <platform name="ios">
-        <preference name="IOS_FIREBASE_POD_VERSION" default="9.3.0" />
+        <preference name="IOS_FIREBASE_POD_VERSION" default="10.7.0" />
 
         <hook type="after_plugin_install" src="hooks/ios/after_plugin_install.js" />
         <hook type="before_plugin_uninstall" src="hooks/ios/before_plugin_uninstall.js" />
@@ -37,7 +39,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 
         <!--
             use a bit hacky method to set boolean value as a string:
-            https://developer.apple.com/documentation/foundation/nsstring/1409420-boolvalue?preferredLanguage=occ
+        https://developer.apple.com/documentation/foundation/nsstring/1409420-boolvalue?preferredLanguage=occ
         -->
         <config-file target="*-Info.plist" parent="FirebaseCrashlyticsCollectionEnabled">
             <string>$CRASHLYTICS_COLLECTION_ENABLED</string>
@@ -48,7 +50,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 
         <podspec>
             <config>
-                <source url="https://cdn.cocoapods.org/"/>
+                <source url="https://cdn.cocoapods.org/" />
             </config>
             <pods use-frameworks="true">
                 <pod name="Firebase/Crashlytics" spec="$IOS_FIREBASE_POD_VERSION" />
@@ -57,11 +59,12 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     </platform>
 
     <platform name="android">
-        <preference name="ANDROID_FIREBASE_BOM_VERSION" default="30.3.1" />
+        <preference name="ANDROID_FIREBASE_BOM_VERSION" default="31.4.0" />
 
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="FirebaseCrash">
-                <param name="android-package" value="by.chemerisuk.cordova.firebase.FirebaseCrashPlugin" />
+                <param name="android-package"
+                    value="by.chemerisuk.cordova.firebase.FirebaseCrashPlugin" />
                 <param name="onload" value="true" />
             </feature>
         </config-file>
@@ -69,18 +72,20 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         <config-file target="config.xml" parent="/*">
             <preference name="AndroidXEnabled" value="true" />
             <preference name="GradlePluginGoogleServicesEnabled" value="true" />
-            <preference name="GradlePluginGoogleServicesVersion" value="4.3.13" />
+            <preference name="GradlePluginGoogleServicesVersion" value="4.3.15" />
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.INTERNET" />
-  		</config-file>
-
-        <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="$CRASHLYTICS_COLLECTION_ENABLED" />
         </config-file>
 
-        <source-file src="src/android/FirebaseCrashPlugin.java" target-dir="src/by/chemerisuk/cordova/firebase/" />
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <meta-data android:name="firebase_crashlytics_collection_enabled"
+                android:value="$CRASHLYTICS_COLLECTION_ENABLED" />
+        </config-file>
+
+        <source-file src="src/android/FirebaseCrashPlugin.java"
+            target-dir="src/by/chemerisuk/cordova/firebase/" />
 
         <dependency id="cordova-support-android-plugin" version="~2.0.4" />
 
