chore: Update IOS_FIREBASE_POD_VERSION to 10.29.0 in plugin.xml

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-xmlns:android="http://schemas.android.com/apk/res/android"
-           id="cordova-plugin-firebase-crash"
-      version="8.0.2">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    id="cordova-plugin-firebase-crash"
+    version="8.0.2">
 
     <name>cordova-plugin-firebase-crash</name>
     <description>Cordova plugin for Firebase Crashlytics</description>
@@ -21,11 +21,14 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     </js-module>
 
     <preference name="CRASHLYTICS_COLLECTION_ENABLED" default="true" />
+    
     <dependency id="cordova-outsystems-firebase-core"
         url="https://github.com/OutSystems/cordova-outsystems-firebase-core.git#1.0.1" />
+    <dependency id="cordova-plugin-firebase-analytics"
+        url="https://github.com/casapia/cordova-plugin-firebase-analytics#dev" />
 
     <platform name="ios">
-        <preference name="IOS_FIREBASE_POD_VERSION" default="10.28.0" />
+        <preference name="IOS_FIREBASE_POD_VERSION" default="~> 10.29.0" />
 
         <hook type="before_plugin_uninstall" src="hooks/ios/before_plugin_uninstall.js" />
 
