--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-firebase-crash",
-  "version": "8.0.2",
+  "version": "8.0.2-NTL4",
   "description": "Cordova plugin for Firebase Crashlytics",
   "types": "./types/index.d.ts",
   "cordova": {
