chore: Update Gradle

--- a/plugin.xml
+++ b/plugin.xml
@@ -71,11 +71,11 @@
             </feature>
         </config-file>
 
-        <config-file target="config.xml" parent="/*">
+        <!-- <config-file target="config.xml" parent="/*">
             <preference name="AndroidXEnabled" value="true" />
             <preference name="GradlePluginGoogleServicesEnabled" value="true" />
             <preference name="GradlePluginGoogleServicesVersion" value="4.3.8" />
-        </config-file>
+        </config-file> -->
 
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.INTERNET" />
